# aiowhitebit

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  example.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  ws_example.py  ws_subscribe_example.py
.github/workflows/: publish.yml  test.yml
aiowhitebit/: __init__.py  config.py  constants.py  converters.py  exceptions.py  private_http_client.py  public_ws_subscriber.py
aiowhitebit/clients/: __init__.py  base.py  private_http_client.py  public_ws_client.py  public_ws_subscriber.py  webhook_client.py
aiowhitebit/clients/private/: __init__.py  v4.py
aiowhitebit/clients/public/: __init__.py  v1.py  v2.py  v4.py
aiowhitebit/clients/public_clients/: base.py  converters.py  public_v1.py  public_v2.py
aiowhitebit/clients/webhook/: __init__.py  webhook_client.py
aiowhitebit/clients/websocket/: __init__.py  public.py  subscriber.py
aiowhitebit/converters/: __init__.py
aiowhitebit/converters/private/: __init__.py  v4.py
aiowhitebit/converters/public/: __init__.py  v1.py  v2.py  v4.py
aiowhitebit/http_data_models/: __init__.py  request_models.py  response_models.py
aiowhitebit/models/: __init__.py  base.py
aiowhitebit/models/private/: __init__.py  request.py  response.py
aiowhitebit/models/public/: __init__.py
aiowhitebit/models/public/v1/: __init__.py  request.py  response.py
aiowhitebit/models/public/v2/: __init__.py  request.py  response.py
aiowhitebit/models/public/v4/: __init__.py  request.py  response.py
aiowhitebit/models/webhook/: __init__.py  payload.py
aiowhitebit/models/websocket/: __init__.py  request.py  response.py
aiowhitebit/utils/: rate_limiting.py  validation.py
aiowhitebit/webhook_models/: __init__.py  payload.py
aiowhitebit/ws_data_models/: request_models.py  response_models.py
examples/: example.py  example_v1.py  example_v2.py  example_v4.py  webhook example.py  webhook_comprehensive_example.py  webhook_verification_example.py  ws_example.py  ws_subscribe_example.py
tests/: README.md  __init__.py
tests/clients/websocket/: test_public.py  test_subscriber.py
tests/public/: __init__.py  test_converters.py  test_public_v1_client.py  test_public_v2_client.py  test_public_v4_client.py
tests/webhook/: test_webhook_client.py
